--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,21 @@ node_modules
 .next
 out
 
+
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE files
+# .vscode/
+# .idea/
+#*.swp
+
+# Build output
+dist/
