--- a/.gitignore
+++ b/.gitignore
@@ -3,22 +3,48 @@
 __*
 
 # ---Global ignore ---
-.env*
-node_modules
-# Next.js
-.next
-out
 
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
+# testing
+/coverage
 
-# OS generated files
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# OS generated files (misc)
 .DS_Store
 Thumbs.db
+*.pem
 
-# Logs
+# debug Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
+
+# env files (can opt-in for committing if needed)
+.env*
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
 
 # IDE files
 # .vscode/
