--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "1-koryenalbcraft-v1",
-    "version": "1.0.0",
+    "version": "0.1.0",
     "description": "",
-    "main": "index.js",
+    "private": true,
     "directories": {
         "lib": "lib"
     },
@@ -10,7 +10,8 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "next dev",
         "build": "next build",
-        "start": "next start"
+        "start": "next start",
+        "lint": "next lint"
     },
     "repository": {
         "type": "git",
@@ -19,19 +20,30 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "type": "commonjs",
     "bugs": {
         "url": "https://github.com/neonzoul/1st-KoryenAlbCraft-v1/issues"
     },
     "homepage": "https://github.com/neonzoul/1st-KoryenAlbCraft-v1#readme",
     "dependencies": {
-        "next": "^15.3.5",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.525.0",
+        "next": "^15.4.1",
+        "postcss": "^8.5.6",
         "react": "^19.1.0",
-        "react-dom": "^19.1.0"
+        "react-dom": "^19.1.0",
+        "tailwind-merge": "^3.3.1"
     },
     "devDependencies": {
-        "@types/node": "24.0.13",
-        "@types/react": "19.1.8",
-        "typescript": "5.8.3"
+        "@eslint/eslintrc": "^3",
+        "@tailwindcss/postcss": "^4.1.11",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "eslint": "^9",
+        "eslint-config-next": "15.4.1",
+        "tailwindcss": "^4.1.11",
+        "tw-animate-css": "^1.3.5",
+        "typescript": "^5"
     }
 }
