feat(auth): Configure Google OAuth credentials
- Generated Google OAuth 2.0 Client ID and Client Secret via Google Cloud Console.
- Created the .env.local file to securely store these keys.
- Confirmed .gitignore is correctly configured to exclude .env* files, ensuring secrets are not committed to the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ __*
 
 # ---Global ignore ---
 
+
+# ***env files (can opt-in for committing if needed)
+.env*
+
 # dependencies
 /node_modules
 /.pnp
@@ -34,9 +38,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
-
-# env files (can opt-in for committing if needed)
-.env*
 
 # vercel
 .vercel
